# ComfyUI-NovaSR

./: README.md  __init__.py  novasr_node.py  pyproject.toml  requirements.txt  setup.py
NovaSR/: __init__.py  activations.py  commons.py  resample.py  speechsr.py
