[project]
name = "ComfyUI-NovaSR"
description = "ComfyUI node for NovaSR - Ultra-fast audio super resolution (3600x realtime, 50KB model)"
version = "1.0.0"
license = {file = "LICENSE"}

dependencies = [
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "soundfile",
    "librosa>=0.9.2",
    "huggingface_hub",
    "einops",
    "safetensors",
    "matplotlib",
    "numpy",
]

[project.urls]
Repository = "https://github.com/Saganaki22/ComfyUI-NovaSR"

# Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "saganaki22"
DisplayName = "NovaSR"
Icon = "https://avatars.githubusercontent.com/u/84208527"
